--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="border-radius: none;">
            
-                <a class="navbar-brand" href="#"><i>ExpApp</i></a>
+                <a class="navbar-brand" href="{% url 'home'%}"><i>ExpApp</i></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,6 +34,9 @@
                         <a class="nav-link" href="{% url 'account:logout' %}">Logout</a> 
                     </li>
                     {% else %}
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'account:signup' %}">Signup</a>
+                  </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'account:login' %}">Login</a>
                     </li>
